Ghost/ghost-svc.yaml
kind: Service
apiVersion: v1
metadata:
  name: ghost-svc
spec:
  selector:
    app: ghost
  ports:
  - protocol: TCP
    port: 80
    targetPort: 2368
