Ghost/ghost-tls-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ghost-ingress
spec:
  tls:
  - hosts:
    - example.com
    secretName: <secret-name>
  rules:
  - host: example.com
    http:
      paths:
      - path: /
        backend:
          serviceName: ghost-svc
          servicePort: 80
